# bbopt-nomad

.github/workflows/: pypi.yml
examples/: CMakeLists.txt
examples/basic/batch/example2/: param.txt
examples/basic/batch/example3/: bb3.cpp
examples/basic/batch/example4/: CMakeLists.txt  bb4.cpp  param.txt
examples/basic/batch/example5/: bb5.cpp  param.txt
examples/basic/batch/multi_obj/: param.txt
examples/basic/batch/multi_obj2/: param.txt
examples/basic/batch/single_obj_MPIparallel/: param.txt
interfaces/PyNomad/: setup.py
src/: CMakeLists.txt  CMakeListsLibs.txt
src/Algos/: MainStep.cpp
